--- a/x11/kf5-kactivities-stats/Makefile
+++ b/x11/kf5-kactivities-stats/Makefile
@@ -7,7 +7,7 @@ COMMENT=	KF5 statistics for activities
 
 BUILD_DEPENDS=	${LOCALBASE}/include/boost/range/algorithm.hpp:devel/boost-libs
 
-USES=		cmake compiler:c++11-lib kde:5 pathfix qt:5 tar:xz
+USES=		cmake compiler:c++11-lib kde:5 kfhack pathfix qt:5 tar:xz
 USE_KDE=	activities config \
 		ecm:build
 USE_QT=		core dbus sql \
