--- a/x11/kf5-kded/Makefile
+++ b/x11/kf5-kded/Makefile
@@ -5,7 +5,7 @@ CATEGORIES=	x11 kde kde-frameworks
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	KF5 extensible daemon for providing system level services
 
-USES=		cmake compiler:c++11-lib kde:5 qt:5 tar:xz
+USES=		cmake compiler:c++11-lib kde:5 kfhack qt:5 tar:xz
 USE_KDE=	config coreaddons crash dbusaddons service \
 		doctools:build ecm:build
 USE_QT=		core dbus gui widgets \
