--- a/x11/kf5-kdelibs4support/Makefile
+++ b/x11/kf5-kdelibs4support/Makefile
@@ -7,7 +7,7 @@ COMMENT=	KF5 porting aid from KDELibs4
 
 BUILD_DEPENDS=	p5-URI>=0:net/p5-URI
 
-USES=		cmake compiler:c++11-lib gettext kde:5 qt:5 shebangfix \
+USES=		cmake compiler:c++11-lib gettext kde:5 kfhack qt:5 shebangfix \
 		tar:xz xorg
 USE_KDE=	auth bookmarks codecs completion config configwidgets \
 		coreaddons crash dbusaddons emoticons globalaccel guiaddons \
