--- a/x11/kf5-krunner/Makefile
+++ b/x11/kf5-krunner/Makefile
@@ -5,7 +5,7 @@ CATEGORIES=	x11 kde kde-frameworks
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	KF5 parallelized query system
 
-USES=		cmake compiler:c++11-lib gettext kde:5 qt:5 tar:xz
+USES=		cmake compiler:c++11-lib gettext kde:5 kfhack qt:5 tar:xz
 USE_KDE=	activities config coreaddons i18n kio package plasma-framework \
 		service threadweaver \
 		ecm:build
