--- a/x11/kf5-kwindowsystem/Makefile
+++ b/x11/kf5-kwindowsystem/Makefile
@@ -7,7 +7,7 @@ COMMENT=	KF5 library for access to the windowing system
 
 LIB_DEPENDS=	libxcb-keysyms.so:x11/xcb-util-keysyms
 
-USES=		cmake compiler:c++11-lib kde:5 pkgconfig qt:5 tar:xz xorg
+USES=		cmake compiler:c++11-lib kde:5 kfhack pkgconfig qt:5 tar:xz xorg
 USE_KDE=	ecm:build
 USE_QT=		core gui linguisttools widgets x11extras \
 		buildtools:build qmake:build testlib:build
