--- a/devel/appstream-glib/Makefile
+++ b/devel/appstream-glib/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	appstream-glib
-PORTVERSION=	0.8.2
-PORTREVISION=	2
+PORTVERSION=	0.8.3
+PORTREVISION=	0
 CATEGORIES=	devel
 MASTER_SITES=	http://people.freedesktop.org/~hughsient/appstream-glib/releases/
 DIST_SUBDIR=	gnome
@@ -23,14 +23,15 @@ RUN_DEPENDS=	gcab:archivers/gcab
 
 CONFLICTS_BUILD=	appstream-glib-0.5.*
 
-USES=		compiler:c11 gettext gperf gnome iconv:wchar_t localbase libarchive meson \
-		pkgconfig sqlite ssl tar:xz
+USES=		compiler:c11 gettext gperf gnome libarchive meson \
+		pkgconfig sqlite tar:xz
 USE_GNOME=	cairo gdkpixbuf glib20 gtk30 introspection:build \
 		libxml2:build pango
 USE_LDCONFIG=	yes
 MESON_ARGS=	-Drpm=false \
-		-Dalpm=false \
-		-Dstemmer=false
+		-Dalpm=false
+
+TESTING_UNSAFE=	not ok /AppStream/app - As:ERROR:../libappstream-glib/as-self-test.c:2134:as_test_app_func: assertion failed (as_app_get_update_contact (app) == "richard@hughsie.co.uk")
 
 OPTIONS_DEFINE=	DOCS MANPAGES
 OPTIONS_DEFAULT=MANPAGES
@@ -44,7 +45,5 @@ MANPAGES_MESON_TRUE=	man
 MANPAGES_BUILD_DEPENDS=	docbook-xml>=0:textproc/docbook-xml \
 			docbook-xsl>=0:textproc/docbook-xsl
 MANPAGES_USE=	GNOME=libxslt:build
-
-NO_TEST=	yes
 
 .include <bsd.port.mk>
