--- a/x11-toolkits/kf5-kdesignerplugin/Makefile
+++ b/x11-toolkits/kf5-kdesignerplugin/Makefile
@@ -5,7 +5,7 @@ CATEGORIES=	x11-toolkits kde kde-frameworks
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	KF5 integration of Frameworks widgets in Qt Designer/Creator
 
-USES=		cmake compiler:c++11-lib gettext kde:5 qt:5 tar:xz
+USES=		cmake compiler:c++11-lib gettext kde:5 kfhack qt:5 tar:xz
 USE_KDE=	config coreaddons \
 		doctools:build ecm:build
 USE_QT=		core buildtools:build qmake:build
