--- a/x11-toolkits/kf5-kconfigwidgets/Makefile
+++ b/x11-toolkits/kf5-kconfigwidgets/Makefile
@@ -5,7 +5,7 @@ CATEGORIES=	x11-toolkits kde kde-frameworks
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	KF5 widgets for configuration dialogs
 
-USES=		cmake compiler:c++11-lib gettext kde:5 qt:5 shebangfix tar:xz
+USES=		cmake compiler:c++11-lib gettext kde:5 kfhack qt:5 shebangfix tar:xz
 USE_KDE=	auth codecs config coreaddons guiaddons \
 		i18n widgetsaddons \
 		doctools:build ecm:build
