--- a/x11-toolkits/kf5-kirigami2/Makefile
+++ b/x11-toolkits/kf5-kirigami2/Makefile
@@ -5,7 +5,7 @@ CATEGORIES=	x11-toolkits kde kde-frameworks
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	QtQuick based components set
 
-USES=		cmake compiler:c++11-lib gettext kde:5 qt:5 tar:xz
+USES=		cmake compiler:c++11-lib gettext kde:5 kfhack qt:5 tar:xz
 USE_KDE=	ecm:build
 USE_QT=		core concurrent dbus declarative graphicaleffects gui \
 		linguisttools network quickcontrols2 svg widgets \
