--- a/x11-toolkits/kf5-kxmlgui/Makefile
+++ b/x11-toolkits/kf5-kxmlgui/Makefile
@@ -5,7 +5,7 @@ CATEGORIES=	x11-toolkits kde kde-frameworks
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	KF5 user configurable main windows
 
-USES=		cmake compiler:c++11-lib gettext kde:5 qt:5 tar:xz
+USES=		cmake compiler:c++11-lib gettext kde:5 kfhack qt:5 tar:xz
 USE_KDE=	auth codecs config configwidgets coreaddons \
 		globalaccel guiaddons i18n iconthemes itemviews \
 		widgetsaddons \
