--- a/graphics/kf5-kimageformats/Makefile
+++ b/graphics/kf5-kimageformats/Makefile
@@ -8,7 +8,7 @@ COMMENT=	KF5 library providing support for additional image formats
 
 LIB_DEPENDS=	libImath.so:math/Imath
 
-USES=		cmake compiler:c++11-lib kde:5 pkgconfig qt:5 tar:xz
+USES=		cmake compiler:c++11-lib kde:5 kfhack pkgconfig qt:5 tar:xz
 USE_KDE=	archive \
 		ecm:build
 USE_QT=		core gui printsupport widgets \
