--- a/graphics/kf5-prison/Makefile
+++ b/graphics/kf5-prison/Makefile
@@ -9,7 +9,7 @@ LIB_DEPENDS=	libdmtx.so:graphics/libdmtx \
 		libqrencode.so:graphics/libqrencode \
 		libZXing.so:textproc/zxing-cpp
 
-USES=		cmake compiler:c++11-lang kde:5 qt:5 tar:xz
+USES=		cmake compiler:c++11-lang kde:5 kfhack qt:5 tar:xz
 USE_KDE=	ecm:build
 USE_QT=		core declarative gui multimedia network \
 		buildtools:build qmake:build testlib:build widgets:build
