--- a/devel/kf6-kcoreaddons/Makefile
+++ b/devel/kf6-kcoreaddons/Makefile
@@ -5,7 +5,7 @@ CATEGORIES=	devel kde kde-frameworks
 COMMENT=	Qt addon library with a collection of non-GUI utilities
 MAINTAINER=	ports@MidnightBSD.org
 
-USES=		cmake kde:6 qt:6 shared-mime-info tar:xz
+USES=		cmake kde:6 kfhack qt:6 shared-mime-info tar:xz
 USE_KDE=	ecm:build
 USE_QT=		base declarative tools
 
