--- a/mail/panda-cclient/Makefile
+++ b/mail/panda-cclient/Makefile
@@ -5,6 +5,7 @@ PKGNAMEPREFIX=	panda-
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Mark Crispin's C-client mail access routines forked from UW
+WWW=		https://github.com/jonabbey/panda-imap
 
 LICENSE=	Apache-2.0
 LICENSE_FILE=	${WRKSRC}/LICENSE
