--- a/mail/fetchmail/Makefile
+++ b/mail/fetchmail/Makefile
@@ -1,8 +1,10 @@
 PORTNAME?=	fetchmail
-DISTVERSION=	6.4.39
+DISTVERSION=	6.5.2
 PORTREVISION?=	0
 CATEGORIES=	mail
-MASTER_SITES=	SF/fetchmail/branch_6.4/
+# The next line is inherited by the fetchmailconf dependent port,
+# do NOT replace fetchmail by ${PORTNAME}
+MASTER_SITES=	SF/fetchmail/branch_6.5/
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT?=	Batch mail retrieval utility for IMAP/POP3/ETRN/ODMR
@@ -11,19 +13,18 @@ WWW=		https://www.fetchmail.info/
 LICENSE=	gpl2+
 
 .if empty(MASTERDIR)
-USES=		cpe gmake tar:xz
+USES=		cpe gmake pkgconfig tar:xz
 IGNORE_SSL=	libressl libressl-devel
 IGNORE_SSL_REASON=	incompatible license/no GPLv2 clause 2b exception for LibreSSL
 
 USE_RC_SUBR=	fetchmail
 
 GNU_CONFIGURE=	yes
+GNU_CONFIGURE_MANPREFIX=${PREFIX}/share
 
 # the added PYTHON=: suppresses python builds,
 # see ../../mail/fetchmailconf/ for the configuration tool
-CONFIGURE_ARGS=	--enable-fallback=no \
-		--enable-RPA \
-		--enable-SDPS \
+CONFIGURE_ARGS=	--enable-SDPS \
 		--without-hesiod \
 		PYTHON=:
 
@@ -31,7 +32,6 @@ CONFIGURE_ARGS=	--enable-fallback=no \
 # for instance, libcom_err.so on GSSAPI_NONE builds:
 LDFLAGS+=	-L${LOCALBASE}/lib -Wl,--as-needed
 
-PATCH_STRIP=	-p1
 SUB_FILES=	pkg-message
 USERS=		${PORTNAME}
 GROUPS=		${USERS}
@@ -40,16 +40,17 @@ PORTDOCS=	FAQ FEATURES NEWS NOTES OLDNEWS README README.SSL \
 		README.SSL-SERVER design-notes.html esrs-design-notes.html \
 		fetchmail-FAQ.html fetchmail-features.html todo.html
 
-OPTIONS_DEFINE=		CA_BUNDLE DOCS NLS
-OPTIONS_DEFAULT=	CA_BUNDLE GSSAPI_BASE OPENSSL
+OPTIONS_DEFINE=		OPIE RPA DOCS NLS
+OPTIONS_DEFAULT=	GSSAPI_BASE OPENSSL RPA
 OPTIONS_SINGLE=		GSSAPI TLS
 OPTIONS_SINGLE_GSSAPI=	GSSAPI_BASE GSSAPI_HEIMDAL GSSAPI_MIT GSSAPI_NONE
 OPTIONS_SINGLE_TLS=	OPENSSL WOLFSSL
 
 OPTIONS_SUB=	yes
 
-CA_BUNDLE_DESC=		Install CA bundle for OpenSSL
-CA_BUNDLE_RUN_DEPENDS=	${LOCALBASE}/share/certs/ca-root-nss.crt:security/ca_root_nss
+OPIE_DESC=			Build with OPIE support (deprecated - weak/broken cryptography)
+
+RPA_DESC=			Build with RPA support (deprecated - weak/broken cryptography)
 
 GSSAPI_BASE_USES=		gssapi
 GSSAPI_BASE_CONFIGURE_ON=	${GSSAPI_CONFIGURE_ARGS} \
@@ -66,6 +67,10 @@ NLS_USES=		gettext
 NLS_CONFIGURE_ENABLE=	nls
 
 OPENSSL_CONFIGURE_WITH=	ssl=${OPENSSLBASE}
+
+OPIE_CONFIGURE_ON=		--enable-opie
+
+RPA_CONFIGURE_ON=		--enable-RPA
 
 WOLFSSL_LIB_DEPENDS=	libwolfssl.so:security/wolfssl
 WOLFSSL_USES_OFF=	ssl
@@ -97,8 +102,4 @@ post-install-DOCS-on:
 
 .endif
 
-.include <bsd.port.pre.mk>
-
-CONFIGURE_ARGS+=	--enable-opie
-
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
