--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -74,6 +74,8 @@ SUBDIR += exempi
 SUBDIR += expat2
 SUBDIR += fcitx-qt5
 SUBDIR += fcitx5
+SUBDIR += fcitx5-lua
+SUBDIR += fcitx5-qt
 SUBDIR += fixrtf
 SUBDIR += flex
 SUBDIR += fop
