editors/linux-openoffice3: use linux c7

--- a/editors/linux-openoffice3/Makefile
+++ b/editors/linux-openoffice3/Makefile
@@ -14,8 +14,8 @@ LICENSE=	lgpl3
 
 RUN_DEPENDS+=	${LOCALBASE}/share/icons/hicolor/index.theme:${PORTSDIR}/misc/hicolor-icon-theme
 
+USES=		linux:c7
 USE_GCPIO=	yes
-USE_LINUX=	yes
 USE_XORG=	x11 ice xaw xau xext xrender xrandr \
 		xi xt xcursor xdamage xcomposite xfixes
 NO_BUILD=	yes
