--- a/devel/tevent/Makefile
+++ b/devel/tevent/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=			tevent
-DISTVERSION=			0.13.0
+DISTVERSION=			0.15.0
 PORTREVISION=			1
 PORTEPOCH=			0
 CATEGORIES=			devel
@@ -23,8 +23,7 @@ CONFIGURE_LOG=			bin/config.log
 PKGCONFIGDIR?=			${PREFIX}/libdata/pkgconfig
 PLIST_SUB=			PKGCONFIGDIR=${PKGCONFIGDIR:S;^${PREFIX}/;;}
 
-CONFIGURE_ARGS=			--mandir=${MANPREFIX}/man \
-				--disable-rpath \
+CONFIGURE_ARGS=			--disable-rpath \
 				--disable-rpath-install \
 				--bundled-libraries=!talloc,cmocka \
 				--builtin-libraries=replace \
@@ -32,9 +31,9 @@ CONFIGURE_ARGS=			--mandir=${MANPREFIX}/man \
 CONFIGURE_ENV=			PYTHONHASHSEED=1
 MAKE_ENV=			PYTHONHASHSEED=1
 
-MANPAGES_DESC=			Build and install manpages (requires textproc/docbook-xsl)
+CONFLICTS_INSTALL=		tevent[0-9]*
 
-OPTIONS_DEFINE=			DEBUG MANPAGES PYTHON
+OPTIONS_DEFINE=			DEBUG PYTHON
 OPTIONS_DEFAULT=		PYTHON
 OPTIONS_SUB=			yes
 
@@ -47,14 +46,15 @@ PYTHON_USE=			python=py3kplist
 PYTHON_USES_OFF=		python:build,test
 PYTHON_CONFIGURE_OFF=		--disable-python
 
-MANPAGES_CONFIGURE_ENV_OFF=	XSLTPROC="true"
-MANPAGES_BUILD_DEPENDS=		${LOCALBASE}/share/xsl/docbook/manpages/docbook.xsl:textproc/docbook-xsl \
-				xsltproc:textproc/libxslt
 # No fancy color error messages
 CFLAGS+=			${CFLAGS_${CHOSEN_COMPILER_TYPE}}
 CFLAGS_clang=			-fno-color-diagnostics
 CONFIGURE_ENV+=			NOCOLOR=yes
 MAKE_ENV+=			NOCOLOR=yes
+# Some symbols in tevent's linker version scripts are not defined, but since the
+# scripts are generated dynamically, suppress errors with lld >= 17 due to these
+# undefined symbols.
+LDFLAGS+=			-Wl,--undefined-version
 
 NO_TEST=	yes
 
@@ -63,9 +63,10 @@ post-patch:
 					${BUILD_WRKSRC}/wscript
 
 post-install:
-				${RM} ${PREFIX}/lib/tevent/libcmocka-tevent.so
-				${RMDIR} ${PREFIX}/lib/tevent
-				${STRIP_CMD} ${PREFIX}/lib/libtevent.so
+				${RM} ${STAGEDIR}${PREFIX}/lib/tevent/libcmocka-tevent.so
+				${RM} ${STAGEDIR}${PREFIX}/lib/tevent/libpytalloc-util.cpython-${PYTHON_SUFFIX}-tevent.so
+				${RMDIR} ${STAGEDIR}${PREFIX}/lib/tevent
+				${STRIP_CMD} ${STAGEDIR}${PREFIX}/lib/libtevent.so
 
 post-install-PYTHON-on:
 				${STRIP_CMD} ${FAKE_DESTDIR}${PYTHONPREFIX_SITELIBDIR}/_tevent*.so
