--- a/security/sshguard/files/patch-configure.ac
+++ b/security/sshguard/files/patch-configure.ac
@@ -1,11 +1,11 @@
---- configure.ac.orig	2023-06-28 19:03:42 UTC
-+++ configure.ac
-@@ -21,7 +21,7 @@ AM_PROG_LEX
+--- configure.ac.orig	2025-04-28 14:49:54.000000000 -0400
++++ configure.ac	2025-10-27 01:10:35.662986000 -0400
+@@ -21,7 +21,7 @@
  AS_BOX([Headers, Types, and Compiler Checks])
  AC_CHECK_HEADERS([getopt.h])
  
 -AC_CHECK_HEADERS([capsicum_helpers.h libcasper.h], capsicum_found=candidate)
 +AC_CHECK_HEADERS([casper/cap_net.h], capsicum_found=candidate)
- AS_IF([test "$capsicum_found" == "candidate"],
+ AS_IF([test "$capsicum_found" = "candidate"],
        [AC_SEARCH_LIBS([cap_init], [casper], [capsicum_found=yes])]
        [AC_SEARCH_LIBS([cap_getaddrinfo], [cap_net], [capsicum_found=yes])])
