--- a/www/mod_security/Makefile
+++ b/www/mod_security/Makefile
@@ -1,11 +1,9 @@
 PORTNAME=	mod_security
-DISTVERSIONPREFIX=	v
-PORTVERSION=	2.9.6
+PORTVERSION=	2.9.10
 PORTREVISION=	1
+DISTVERSIONPREFIX=	v
 CATEGORIES=	www security
-MASTER_SITES=	https://github.com/SpiderLabs/ModSecurity/releases/download/v${PORTVERSION}/
 PKGNAMEPREFIX=	${APACHE_PKGNAMEPREFIX}
-DISTNAME=	${PORTNAME:S/_//:S/2//}-${PORTVERSION}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Intrusion detection and prevention engine
@@ -13,17 +11,19 @@ WWW=		https://www.modsecurity.org/
 
 LICENSE=	Apache-2.0
 
-LIB_DEPENDS+=	libpcre.so:devel/pcre \
+LIB_DEPENDS+=	libpcre2-8.so:devel/pcre2 \
 		libapr-1.so:devel/apr1 \
 		libyajl.so:devel/yajl \
 		libcurl.so:ftp/curl \
 		libgdbm.so:databases/gdbm \
 		libexpat.so:textproc/expat2
 
-USES=		apache:2.4 bdb gnome perl5 pkgconfig shebangfix
+USES=		apache bdb:18 gnome perl5 pkgconfig shebangfix autoreconf libtool:build
+USE_GITHUB=	yes
+GH_ACCOUNT=	owasp-modsecurity
+GH_PROJECT=	ModSecurity
 USE_GNOME=	libxml2
 GNU_CONFIGURE=	yes
-
 SHEBANG_FILES=	tools/rules-updater.pl.in mlogc/mlogc-batch-load.pl.in
 perl_OLD_CMD=	@PERL@
 
@@ -63,10 +63,7 @@ ETCDIR=		${PREFIX}/etc/modsecurity
 
 REINPLACE_ARGS=	-i ""
 AP_EXTRAS+=	-DWITH_LIBXML2
-CONFIGURE_ARGS+=--with-apxs=${APXS} --with-pcre=${LOCALBASE} --with-yajl=${LOCALBASE} --with-curl=${LOCALBASE}
-
-post-patch:
-	@${REINPLACE_CMD} -e "s/lua5.1/lua-${LUA_VER}/g" ${WRKSRC}/configure
+CONFIGURE_ARGS+=--with-apxs=${APXS} --with-pcre2=${LOCALBASE} --with-yajl=${LOCALBASE} --with-curl=${LOCALBASE}
 
 pre-install:
 	@${MKDIR} ${STAGEDIR}${PREFIX}/${APACHEMODDIR}
