--- a/sysutils/less/Makefile
+++ b/sysutils/less/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	less
-PORTVERSION=	581.2
+DISTVERSION=	661
 CATEGORIES=	sysutils
 MASTER_SITES=	http://www.greenwoodsoftware.com/less/
 
@@ -12,7 +12,7 @@ LICENSE_COMB=	dual
 LICENSE_FILE_gpl3=	${WRKSRC}/COPYING
 LICENSE_FILE_mit=	${WRKSRC}/LICENSE
 
-USES=		cpe ncurses
+USES=		cpe gmake ncurses
 
 CPE_VENDOR=	gnu
 GNU_CONFIGURE=	yes
@@ -27,13 +27,13 @@ PLIST_FILES=	bin/less \
 OPTIONS_DEFINE=		COLORS PCRE
 OPTIONS_DEFAULT=	COLORS PCRE
 
-PCRE_USES=		localbase
-PCRE_CONFIGURE_ON=	--with-regex=pcre
-PCRE_LIB_DEPENDS=	libpcre.so:devel/pcre
-PCRE_LDFLAGS=		-L${LOCALBASE}/lib -lpcre
-PCRE_CONFIGURE_OFF=	--with-regex=posix
-
 COLORS_DESC=		Enable colors support via escape sequence
 COLORS_CPPFLAGS=	-DCOLOR_LESS
+
+PCRE_LIB_DEPENDS=	libpcre.so:devel/pcre
+PCRE_USES=		localbase
+PCRE_CONFIGURE_ON=	--with-regex=pcre
+PCRE_CONFIGURE_OFF=	--with-regex=posix
+PCRE_LDFLAGS=		-L${LOCALBASE}/lib -lpcre
 
 .include <bsd.port.mk>
