powerman and nut

--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -169,6 +169,7 @@ SUBDIR += munin-node
 SUBDIR += ncdu
 SUBDIR += neofetch
 SUBDIR += node_exporter
+SUBDIR += nut
 SUBDIR += nvclock
 SUBDIR += nvme-cli
 SUBDIR += obliterate
@@ -213,6 +214,7 @@ SUBDIR += polkit
 SUBDIR += polkit-gnome
 SUBDIR += polkit-qt-1
 SUBDIR += powerdxx
+SUBDIR += powerman
 SUBDIR += pstree
 SUBDIR += pv
 SUBDIR += pwgen
