--- a/comms/Makefile
+++ b/comms/Makefile
@@ -17,7 +17,7 @@ SUBDIR += kermit
 SUBDIR += libimobiledevice
 SUBDIR += libimobiledevice-glue
 SUBDIR += libirman
-SUBDIR += libmodus
+SUBDIR += libmodbus
 SUBDIR += libusbmuxd
 SUBDIR += linux-rl9-qt5-qtconnectivity
 SUBDIR += linux-rl9-qt5-qtsensors
