sysutils/lsof: ver

--- a/sysutils/lsof/Makefile
+++ b/sysutils/lsof/Makefile
@@ -22,10 +22,14 @@ CONFIGURE_ENV=	LSOF_CC="${CC}"  FREEBSD_SYS="${SRC_BASE}/sys"
 LDFLAGS+=	-lutil
 .include <bsd.port.pre.mk>
 
+.if ${OSVERSION} > 400000
+CONFIGURE_ENV+=	LSOF_VSTR="13.4-RELEASE" LSOF_VERS=13000
+.else
 .if ${OSVERSION} > 300000
 CONFIGURE_ENV+=	LSOF_VSTR="12.4-RELEASE" LSOF_VERS=12000
 .else
 CONFIGURE_ENV+=	LSOF_VSTR="11.3-RELEASE" LSOF_VERS=11000
+.endif
 .endif
 
 .if ${CHOSEN_COMPILER_TYPE} == gcc
