--- a/security/pam_google_authenticator/Makefile
+++ b/security/pam_google_authenticator/Makefile
@@ -1,28 +1,31 @@
 PORTNAME=	pam_google_authenticator
-PORTVERSION=	1.08
+PORTVERSION=	1.11
 PORTEPOCH=	1
 CATEGORIES=	security
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	PAM module for two-step authentication from Google
+WWW=		https://github.com/google/google-authenticator-libpam
 
 LICENSE=	Apache-2.0
 
 USES=		autoreconf gmake libtool
-GNU_CONFIGURE=	YES
+GNU_CONFIGURE=	yes
+GNU_CONFIGURE_MANPREFIX=${PREFIX}/share
 
 USE_GITHUB=	yes
 GH_ACCOUNT=	google
 GH_PROJECT=	google-authenticator-libpam
 
-OPTIONS_DEFINE=	QRENCODE
-OPTIONS_DEFAULT=	QRENCODE
-QRENCODE_DESC=	Allow creation of QR-codes
+INSTALL_TARGET=	install-strip
 
+OPTIONS_DEFINE=		QRENCODE
+OPTIONS_DEFAULT=	QRENCODE
+
+QRENCODE_DESC=		Allow creation of QR-codes
 QRENCODE_LIB_DEPENDS=	libqrencode.so:graphics/libqrencode
 
 post-patch:
-	@${REINPLACE_CMD} -e 's;/security;;'	\
-		${WRKSRC}/Makefile.am
+	@${REINPLACE_CMD} -e 's;/security;;' ${WRKSRC}/Makefile.am
 
 .include <bsd.port.mk>
