--- a/www/zola/Makefile.crates
+++ b/www/zola/Makefile.crates
@@ -1,89 +1,112 @@
-CARGO_CRATES=	addr2line-0.21.0 \
-		adler-1.0.2 \
-		ahash-0.7.7 \
-		ahash-0.8.6 \
+CARGO_CRATES=	addr2line-0.24.2 \
+		adler2-2.0.0 \
+		ahash-0.7.8 \
+		ahash-0.8.11 \
 		aho-corasick-0.7.20 \
-		aho-corasick-1.1.2 \
-		ammonia-3.3.0 \
+		aho-corasick-1.1.3 \
+		aligned-vec-0.5.0 \
+		allocator-api2-0.2.21 \
+		ammonia-4.0.0 \
 		android-tzdata-0.1.1 \
 		android_system_properties-0.1.5 \
-		anstream-0.6.5 \
-		anstyle-1.0.4 \
-		anstyle-parse-0.2.3 \
-		anstyle-query-1.0.2 \
-		anstyle-wincon-3.0.2 \
+		anstream-0.6.18 \
+		anstyle-1.0.10 \
+		anstyle-parse-0.2.6 \
+		anstyle-query-1.1.2 \
+		anstyle-wincon-3.0.7 \
 		any_ascii-0.1.7 \
-		anyhow-1.0.75 \
-		arrayvec-0.7.4 \
+		anyhow-1.0.95 \
+		arbitrary-1.4.1 \
+		arg_enum_proc_macro-0.3.4 \
+		arrayvec-0.7.6 \
 		assert-json-diff-2.0.2 \
+		atomic-waker-1.1.2 \
 		atty-0.2.14 \
-		autocfg-1.1.0 \
-		backtrace-0.3.69 \
-		base64-0.21.5 \
+		autocfg-1.4.0 \
+		av1-grain-0.2.3 \
+		avif-parse-1.3.2 \
+		avif-serialize-0.8.2 \
+		backtrace-0.3.74 \
+		base64-0.22.1 \
+		base64-simd-0.7.0 \
 		bincode-1.3.3 \
 		bit_field-0.10.2 \
 		bitflags-1.3.2 \
-		bitflags-2.4.1 \
+		bitflags-2.8.0 \
+		bitreader-0.3.11 \
+		bitstream-io-2.6.0 \
+		bitvec-1.0.1 \
 		block-buffer-0.7.3 \
 		block-buffer-0.10.4 \
 		block-padding-0.1.5 \
-		bstr-1.8.0 \
+		bstr-1.11.3 \
 		build_const-0.2.2 \
-		bumpalo-3.14.0 \
+		built-0.7.6 \
+		bumpalo-3.17.0 \
 		byte-tools-0.3.1 \
-		bytecount-0.6.7 \
-		bytemuck-1.14.0 \
+		bytecheck-0.6.12 \
+		bytecheck_derive-0.6.12 \
+		bytecount-0.6.8 \
+		bytemuck-1.21.0 \
 		byteorder-1.5.0 \
+		byteorder-lite-0.1.0 \
 		bytes-0.4.12 \
-		bytes-1.5.0 \
-		camino-1.1.6 \
-		cargo-platform-0.1.5 \
-		cargo_metadata-0.14.2 \
-		cc-1.0.83 \
+		bytes-1.10.0 \
+		cc-1.2.14 \
 		cedarwood-0.4.6 \
+		cfg-expr-0.15.8 \
 		cfg-if-0.1.10 \
 		cfg-if-1.0.0 \
-		chrono-0.4.31 \
-		chrono-tz-0.8.4 \
-		chrono-tz-build-0.2.1 \
+		cfg_aliases-0.2.1 \
+		chrono-0.4.39 \
+		chrono-tz-0.9.0 \
+		chrono-tz-build-0.3.0 \
 		clap-3.2.25 \
-		clap-4.4.11 \
-		clap_builder-4.4.11 \
-		clap_complete-4.4.4 \
+		clap-4.5.29 \
+		clap_builder-4.5.29 \
+		clap_complete-4.5.44 \
 		clap_derive-3.2.25 \
-		clap_derive-4.4.7 \
+		clap_derive-4.5.28 \
 		clap_lex-0.2.4 \
-		clap_lex-0.6.0 \
+		clap_lex-0.7.4 \
 		codemap-0.1.3 \
 		color_quant-1.1.0 \
-		colorchoice-1.0.0 \
-		colored-2.1.0 \
-		console-0.15.7 \
-		convert_case-0.4.0 \
+		colorchoice-1.0.3 \
+		colored-2.2.0 \
+		console-0.15.10 \
+		const-str-0.3.2 \
+		const-str-proc-macro-0.3.2 \
+		convert_case-0.6.0 \
 		core-foundation-0.9.4 \
-		core-foundation-sys-0.8.6 \
-		cpufeatures-0.2.11 \
+		core-foundation-sys-0.8.7 \
+		cpufeatures-0.2.17 \
 		crc-1.8.1 \
-		crc32fast-1.3.2 \
-		crossbeam-deque-0.8.4 \
-		crossbeam-epoch-0.9.16 \
-		crossbeam-utils-0.8.17 \
-		crunchy-0.2.2 \
+		crc32fast-1.4.2 \
+		crossbeam-deque-0.8.6 \
+		crossbeam-epoch-0.9.18 \
+		crossbeam-utils-0.8.21 \
+		crunchy-0.2.3 \
 		crypto-common-0.1.6 \
-		css-minify-0.3.1 \
-		csv-1.3.0 \
-		csv-core-0.1.11 \
-		ctrlc-3.4.1 \
-		deranged-0.3.10 \
-		derive_more-0.99.17 \
-		deunicode-1.4.2 \
+		cssparser-0.33.0 \
+		cssparser-color-0.1.0 \
+		cssparser-macros-0.6.1 \
+		csv-1.3.1 \
+		csv-core-0.1.12 \
+		ctrlc-3.4.5 \
+		dashmap-5.5.3 \
+		data-encoding-2.8.0 \
+		data-url-0.1.1 \
+		deranged-0.3.11 \
+		deunicode-1.6.0 \
 		digest-0.8.1 \
 		digest-0.10.7 \
-		displaydoc-0.2.4 \
+		displaydoc-0.2.5 \
 		doc-comment-0.3.3 \
-		either-1.9.0 \
+		dtoa-1.0.9 \
+		dtoa-short-0.3.5 \
+		either-1.13.0 \
 		elasticlunr-rs-3.0.2 \
-		encode_unicode-0.3.6 \
+		encode_unicode-1.0.0 \
 		encoding-0.2.33 \
 		encoding-index-japanese-1.20141219.5 \
 		encoding-index-korean-1.20141219.5 \
@@ -91,93 +114,124 @@ CARGO_CRATES=	addr2line-0.21.0 \
 		encoding-index-singlebyte-1.20141219.5 \
 		encoding-index-tradchinese-1.20141219.5 \
 		encoding_index_tests-0.1.4 \
-		encoding_rs-0.8.33 \
 		env_logger-0.9.3 \
 		equivalent-1.0.1 \
-		errno-0.3.8 \
-		error-chain-0.12.4 \
-		exr-1.71.0 \
+		errno-0.3.10 \
+		exr-1.73.0 \
 		fake-simd-0.1.2 \
-		fastrand-2.0.1 \
-		fdeflate-0.3.1 \
-		filetime-0.2.23 \
-		flate2-1.0.28 \
-		flume-0.11.0 \
+		fallible_collections-0.5.1 \
+		fastrand-2.3.0 \
+		fdeflate-0.3.7 \
+		file-id-0.2.2 \
+		filetime-0.2.25 \
+		flate2-1.0.35 \
 		fnv-1.0.7 \
 		foreign-types-0.3.2 \
 		foreign-types-shared-0.1.1 \
 		form_urlencoded-1.2.1 \
-		fsevent-0.4.0 \
-		fsevent-sys-2.0.1 \
+		fsevent-sys-4.1.0 \
 		fuchsia-zircon-0.3.3 \
 		fuchsia-zircon-sys-0.3.3 \
+		funty-2.0.0 \
 		futf-0.1.5 \
-		futures-channel-0.3.29 \
-		futures-core-0.3.29 \
-		futures-io-0.3.29 \
-		futures-sink-0.3.29 \
-		futures-task-0.3.29 \
-		futures-util-0.3.29 \
+		futures-channel-0.3.31 \
+		futures-core-0.3.31 \
+		futures-io-0.3.31 \
+		futures-sink-0.3.31 \
+		futures-task-0.3.31 \
+		futures-util-0.3.31 \
 		fxhash-0.2.1 \
 		generic-array-0.12.4 \
 		generic-array-0.14.7 \
 		getrandom-0.1.16 \
-		getrandom-0.2.11 \
+		getrandom-0.2.15 \
+		getrandom-0.3.1 \
 		gh-emoji-1.0.8 \
-		gif-0.12.0 \
-		gimli-0.28.1 \
-		glob-0.3.1 \
-		globset-0.4.14 \
-		globwalk-0.8.1 \
-		grass-0.13.1 \
-		grass_compiler-0.13.0 \
-		h2-0.3.22 \
-		half-2.2.1 \
-		hashbrown-0.11.2 \
+		gif-0.13.1 \
+		gimli-0.31.1 \
+		glob-0.3.2 \
+		globset-0.4.15 \
+		globwalk-0.9.1 \
+		grass-0.13.4 \
+		grass_compiler-0.13.4 \
+		h2-0.3.26 \
+		h2-0.4.7 \
+		half-2.4.1 \
 		hashbrown-0.12.3 \
-		hashbrown-0.14.3 \
+		hashbrown-0.13.2 \
+		hashbrown-0.14.5 \
+		hashbrown-0.15.2 \
 		heck-0.4.1 \
+		heck-0.5.0 \
 		hermit-abi-0.1.19 \
-		hermit-abi-0.3.3 \
-		html5ever-0.26.0 \
-		http-0.2.11 \
+		html5ever-0.27.0 \
+		http-0.2.12 \
+		http-1.2.0 \
 		http-body-0.4.6 \
-		httparse-1.8.0 \
+		http-body-1.0.1 \
+		http-body-util-0.1.2 \
+		httparse-1.10.0 \
 		httpdate-1.0.3 \
 		humansize-2.1.3 \
 		humantime-2.1.0 \
-		hyper-0.14.27 \
-		hyper-rustls-0.24.2 \
-		hyper-tls-0.5.0 \
-		iana-time-zone-0.1.58 \
+		hyper-0.14.32 \
+		hyper-1.6.0 \
+		hyper-rustls-0.27.5 \
+		hyper-tls-0.6.0 \
+		hyper-util-0.1.10 \
+		iana-time-zone-0.1.61 \
 		iana-time-zone-haiku-0.1.2 \
-		idna-0.5.0 \
-		ignore-0.4.21 \
-		image-0.24.7 \
+		icu_collections-1.5.0 \
+		icu_locid-1.5.0 \
+		icu_locid_transform-1.5.0 \
+		icu_locid_transform_data-1.5.0 \
+		icu_normalizer-1.5.0 \
+		icu_normalizer_data-1.5.0 \
+		icu_properties-1.5.1 \
+		icu_properties_data-1.5.0 \
+		icu_provider-1.5.0 \
+		icu_provider_macros-1.5.0 \
+		idna-1.0.3 \
+		idna_adapter-1.2.0 \
+		ignore-0.4.23 \
+		image-0.25.5 \
+		image-webp-0.2.1 \
+		imgref-1.11.0 \
 		indexmap-1.9.3 \
-		indexmap-2.1.0 \
-		inotify-0.7.1 \
+		indexmap-2.7.1 \
+		inotify-0.11.0 \
 		inotify-sys-0.1.5 \
-		insta-1.34.0 \
+		insta-1.42.1 \
+		interpolate_name-0.2.4 \
 		iovec-0.1.4 \
-		ipnet-2.9.0 \
+		ipnet-2.11.0 \
 		is-docker-0.2.0 \
 		is-wsl-0.4.0 \
-		itoa-1.0.10 \
+		is_terminal_polyfill-1.70.1 \
+		itertools-0.10.5 \
+		itertools-0.12.1 \
+		itoa-1.0.14 \
 		jieba-rs-0.6.8 \
-		jobserver-0.1.27 \
-		jpeg-decoder-0.3.0 \
-		js-sys-0.3.66 \
-		kamadak-exif-0.5.5 \
+		jobserver-0.1.32 \
+		jpeg-decoder-0.3.1 \
+		js-sys-0.3.77 \
+		kamadak-exif-0.6.1 \
 		kernel32-sys-0.2.2 \
-		lasso-0.6.0 \
-		lazy_static-1.4.0 \
+		kqueue-1.0.8 \
+		kqueue-sys-1.0.4 \
+		lasso-0.7.3 \
+		lazy_static-1.5.0 \
 		lazycell-1.3.0 \
+		leb128-0.2.5 \
 		lebe-0.5.2 \
 		lexical-sort-0.3.1 \
-		libc-0.2.151 \
-		libm-0.2.8 \
-		libwebp-sys-0.9.4 \
+		libc-0.2.169 \
+		libfuzzer-sys-0.4.9 \
+		libm-0.2.11 \
+		libredox-0.1.3 \
+		libwebp-sys-0.9.6 \
+		lightningcss-1.0.0-alpha.63 \
+		lightningcss-derive-1.0.0-alpha.43 \
 		lindera-0.14.0 \
 		lindera-cc-cedict-builder-0.13.5 \
 		lindera-core-0.13.5 \
@@ -187,97 +241,115 @@ CARGO_CRATES=	addr2line-0.21.0 \
 		lindera-ipadic-builder-0.13.5 \
 		lindera-ko-dic-builder-0.13.5 \
 		lindera-unidic-builder-0.13.5 \
-		line-wrap-0.1.1 \
 		linked-hash-map-0.5.6 \
-		linux-raw-sys-0.4.12 \
-		lock_api-0.4.11 \
-		log-0.4.20 \
+		linux-raw-sys-0.4.15 \
+		litemap-0.7.4 \
+		lock_api-0.4.12 \
+		log-0.4.25 \
+		loop9-0.1.5 \
 		lzma-rs-0.2.0 \
 		mac-0.1.1 \
 		maplit-1.0.2 \
-		markup5ever-0.11.0 \
-		memchr-2.6.4 \
-		memoffset-0.9.0 \
+		markup5ever-0.12.1 \
+		matches-0.1.10 \
+		maybe-rayon-0.1.1 \
+		memchr-2.7.4 \
 		mime-0.3.17 \
-		mime_guess-2.0.4 \
+		mime_guess-2.0.5 \
 		minidom-0.12.0 \
-		minify-html-0.11.1 \
-		minify-js-0.4.3 \
+		minify-html-0.15.0 \
+		minify-html-common-0.0.2 \
+		minify-js-0.5.6 \
 		minimal-lexical-0.2.1 \
-		miniz_oxide-0.7.1 \
+		miniz_oxide-0.8.4 \
 		mio-0.6.23 \
-		mio-0.8.10 \
+		mio-1.0.3 \
 		mio-extras-2.0.6 \
 		miow-0.2.2 \
-		mockito-0.31.1 \
+		mockito-1.6.1 \
 		mutate_once-0.1.1 \
-		native-tls-0.2.11 \
+		native-tls-0.2.13 \
 		net2-0.2.39 \
-		new_debug_unreachable-1.0.4 \
-		nix-0.27.1 \
+		new_debug_unreachable-1.0.6 \
+		nix-0.29.0 \
 		nom-7.1.3 \
 		nom-bibtex-0.5.0 \
-		nom-tracable-0.9.0 \
-		nom-tracable-macros-0.9.0 \
+		nom-tracable-0.9.1 \
+		nom-tracable-macros-0.9.1 \
 		nom_locate-4.2.0 \
-		notify-4.0.17 \
+		noop_proc_macro-0.3.0 \
+		notify-8.0.0 \
+		notify-debouncer-full-0.5.0 \
+		notify-types-2.0.0 \
+		num-bigint-0.4.6 \
+		num-conv-0.1.0 \
+		num-derive-0.4.2 \
 		num-format-0.4.4 \
-		num-integer-0.1.45 \
-		num-rational-0.4.1 \
-		num-traits-0.2.17 \
-		num_cpus-1.16.0 \
-		num_threads-0.1.6 \
-		object-0.32.1 \
-		once_cell-1.19.0 \
+		num-integer-0.1.46 \
+		num-rational-0.4.2 \
+		num-traits-0.2.19 \
+		num_threads-0.1.7 \
+		object-0.36.7 \
+		once_cell-1.20.3 \
 		onig-6.4.0 \
 		onig_sys-69.8.1 \
 		opaque-debug-0.2.3 \
-		open-5.0.1 \
-		openssl-0.10.61 \
+		open-5.3.2 \
+		openssl-0.10.70 \
 		openssl-macros-0.1.1 \
-		openssl-probe-0.1.5 \
-		openssl-sys-0.9.97 \
+		openssl-probe-0.1.6 \
+		openssl-sys-0.9.105 \
 		os_str_bytes-6.6.1 \
-		parking_lot-0.12.1 \
-		parking_lot_core-0.9.9 \
-		parse-js-0.10.3 \
-		parse-zoneinfo-0.3.0 \
+		outref-0.1.0 \
+		parcel_selectors-0.28.1 \
+		parcel_sourcemap-2.1.1 \
+		parking_lot-0.12.3 \
+		parking_lot_core-0.9.10 \
+		parse-js-0.17.0 \
+		parse-zoneinfo-0.3.1 \
+		paste-1.0.15 \
 		path-slash-0.2.1 \
-		pathdiff-0.2.1 \
+		pathdiff-0.2.3 \
 		percent-encoding-2.3.1 \
-		pest-2.7.5 \
-		pest_derive-2.7.5 \
-		pest_generator-2.7.5 \
-		pest_meta-2.7.5 \
-		phf-0.10.1 \
-		phf-0.11.2 \
-		phf_codegen-0.10.0 \
-		phf_codegen-0.11.2 \
-		phf_generator-0.10.0 \
-		phf_generator-0.11.2 \
-		phf_macros-0.10.0 \
-		phf_shared-0.10.0 \
-		phf_shared-0.11.2 \
-		pin-project-lite-0.2.13 \
+		pest-2.7.15 \
+		pest_derive-2.7.15 \
+		pest_generator-2.7.15 \
+		pest_meta-2.7.15 \
+		phf-0.11.3 \
+		phf_codegen-0.11.3 \
+		phf_generator-0.11.3 \
+		phf_macros-0.11.3 \
+		phf_shared-0.11.3 \
+		pin-project-1.1.9 \
+		pin-project-internal-1.1.9 \
+		pin-project-lite-0.2.16 \
 		pin-utils-0.1.0 \
-		pkg-config-0.3.27 \
-		plist-1.6.0 \
-		png-0.17.10 \
+		pkg-config-0.3.31 \
+		plist-1.7.0 \
+		png-0.17.16 \
 		powerfmt-0.2.0 \
-		ppv-lite86-0.2.17 \
+		ppv-lite86-0.2.20 \
 		precomputed-hash-0.1.1 \
 		proc-macro-error-1.0.4 \
 		proc-macro-error-attr-1.0.4 \
-		proc-macro-hack-0.5.20+deprecated \
-		proc-macro2-1.0.70 \
-		pulldown-cmark-0.9.3 \
-		pure-rust-locales-0.7.0 \
+		proc-macro2-1.0.93 \
+		profiling-1.0.16 \
+		profiling-procmacros-1.0.16 \
+		ptr_meta-0.1.4 \
+		ptr_meta_derive-0.1.4 \
+		pulldown-cmark-0.13.0 \
+		pulldown-cmark-escape-0.11.0 \
+		pure-rust-locales-0.8.1 \
 		qoi-0.4.1 \
 		quick-error-2.0.1 \
 		quick-xml-0.17.2 \
-		quick-xml-0.31.0 \
-		quickxml_to_serde-0.5.0 \
-		quote-1.0.33 \
+		quick-xml-0.32.0 \
+		quickxml_to_serde-0.6.0 \
+		quinn-0.11.6 \
+		quinn-proto-0.11.9 \
+		quinn-udp-0.5.10 \
+		quote-1.0.38 \
+		radium-0.7.0 \
 		rand-0.7.3 \
 		rand-0.8.5 \
 		rand_chacha-0.2.2 \
@@ -285,170 +357,190 @@ CARGO_CRATES=	addr2line-0.21.0 \
 		rand_core-0.5.1 \
 		rand_core-0.6.4 \
 		rand_hc-0.2.0 \
-		rayon-1.8.0 \
-		rayon-core-1.12.0 \
-		redox_syscall-0.4.1 \
-		regex-1.10.2 \
-		regex-automata-0.4.3 \
-		regex-syntax-0.7.5 \
-		regex-syntax-0.8.2 \
-		relative-path-1.9.0 \
-		reqwest-0.11.22 \
-		ring-0.17.7 \
-		roxmltree-0.18.1 \
+		rav1e-0.7.1 \
+		ravif-0.11.11 \
+		rayon-1.10.0 \
+		rayon-core-1.12.1 \
+		redox_syscall-0.5.8 \
+		regex-1.11.1 \
+		regex-automata-0.4.9 \
+		regex-syntax-0.8.5 \
+		relative-path-1.9.3 \
+		rend-0.4.2 \
+		reqwest-0.12.12 \
+		rgb-0.8.50 \
+		ring-0.17.9 \
+		rkyv-0.7.45 \
+		rkyv_derive-0.7.45 \
+		roxmltree-0.20.0 \
 		rust-stemmers-1.2.0 \
-		rustc-demangle-0.1.23 \
+		rustc-demangle-0.1.24 \
 		rustc-hash-1.1.0 \
-		rustc_version-0.4.0 \
-		rustix-0.38.28 \
-		rustls-0.21.10 \
-		rustls-pemfile-1.0.4 \
-		rustls-webpki-0.101.7 \
-		ryu-1.0.16 \
-		safemem-0.3.3 \
+		rustc-hash-2.1.1 \
+		rustix-0.38.44 \
+		rustls-0.23.23 \
+		rustls-pemfile-2.2.0 \
+		rustls-pki-types-1.11.0 \
+		rustls-webpki-0.102.8 \
+		rustversion-1.0.19 \
+		ryu-1.0.19 \
 		same-file-1.0.6 \
-		schannel-0.1.22 \
+		schannel-0.1.27 \
 		scopeguard-1.2.0 \
-		sct-0.7.1 \
-		security-framework-2.9.2 \
-		security-framework-sys-2.9.1 \
-		semver-1.0.20 \
-		serde-1.0.193 \
-		serde_derive-1.0.193 \
-		serde_json-1.0.108 \
-		serde_spanned-0.6.4 \
+		seahash-4.1.0 \
+		security-framework-2.11.1 \
+		security-framework-sys-2.14.0 \
+		serde-1.0.217 \
+		serde_derive-1.0.217 \
+		serde_json-1.0.138 \
+		serde_spanned-0.6.8 \
 		serde_urlencoded-0.7.1 \
-		serde_yaml-0.9.27 \
+		serde_yaml-0.9.34+deprecated \
 		sha-1-0.8.2 \
 		sha2-0.10.8 \
+		shlex-1.3.0 \
+		simd-abstraction-0.7.1 \
 		simd-adler32-0.3.7 \
-		similar-2.3.0 \
-		siphasher-0.3.11 \
-		skeptic-0.13.7 \
+		simd_helpers-0.1.0 \
+		simdutf8-0.1.5 \
+		similar-2.7.0 \
+		siphasher-1.0.1 \
 		slab-0.4.9 \
-		slug-0.1.5 \
-		smallvec-1.11.2 \
-		socket2-0.4.10 \
-		socket2-0.5.5 \
-		spin-0.9.8 \
-		string_cache-0.8.7 \
-		string_cache_codegen-0.5.2 \
+		slug-0.1.6 \
+		smallvec-1.13.2 \
+		socket2-0.5.8 \
+		stable_deref_trait-1.2.0 \
+		string_cache-0.8.8 \
+		string_cache_codegen-0.5.3 \
 		strsim-0.10.0 \
-		svg_metadata-0.5.0 \
+		strsim-0.11.1 \
+		subtle-2.6.1 \
+		svg_metadata-0.5.1 \
 		syn-1.0.109 \
-		syn-2.0.41 \
-		syntect-5.1.0 \
-		system-configuration-0.5.1 \
-		system-configuration-sys-0.5.0 \
-		tar-0.4.40 \
-		tempfile-3.8.1 \
+		syn-2.0.98 \
+		sync_wrapper-1.0.2 \
+		synstructure-0.13.1 \
+		syntect-5.2.0 \
+		system-deps-6.2.2 \
+		tap-1.0.1 \
+		tar-0.4.43 \
+		target-lexicon-0.12.16 \
+		tempfile-3.16.0 \
 		tendril-0.4.3 \
-		tera-1.19.1 \
-		termcolor-1.4.0 \
+		tera-1.20.0 \
+		termcolor-1.4.1 \
 		test-case-3.3.1 \
 		test-case-core-3.3.1 \
 		test-case-macros-3.3.1 \
-		textwrap-0.16.0 \
-		thiserror-1.0.51 \
-		thiserror-impl-1.0.51 \
-		tiff-0.9.0 \
-		time-0.3.30 \
+		textwrap-0.16.1 \
+		thiserror-1.0.69 \
+		thiserror-2.0.11 \
+		thiserror-impl-1.0.69 \
+		thiserror-impl-2.0.11 \
+		tiff-0.9.1 \
+		time-0.3.37 \
 		time-core-0.1.2 \
-		time-macros-0.2.15 \
-		tinystr-0.7.5 \
-		tinyvec-1.6.0 \
+		time-macros-0.2.19 \
+		tinystr-0.7.6 \
+		tinyvec-1.8.1 \
 		tinyvec_macros-0.1.1 \
-		tokio-1.35.0 \
+		tokio-1.43.0 \
 		tokio-native-tls-0.3.1 \
-		tokio-rustls-0.24.1 \
-		tokio-util-0.7.10 \
+		tokio-rustls-0.26.1 \
+		tokio-util-0.7.13 \
 		toml-0.5.11 \
-		toml-0.8.8 \
-		toml_datetime-0.6.5 \
-		toml_edit-0.21.0 \
-		tower-service-0.3.2 \
-		tracing-0.1.40 \
-		tracing-core-0.1.32 \
+		toml-0.8.20 \
+		toml_datetime-0.6.8 \
+		toml_edit-0.22.24 \
+		tower-0.5.2 \
+		tower-layer-0.3.3 \
+		tower-service-0.3.3 \
+		tracing-0.1.41 \
+		tracing-core-0.1.33 \
 		try-lock-0.2.5 \
 		typenum-1.17.0 \
-		ucd-trie-0.1.6 \
+		ucd-trie-0.1.7 \
 		unic-char-property-0.9.0 \
 		unic-char-range-0.9.0 \
 		unic-common-0.9.0 \
-		unic-langid-0.9.4 \
-		unic-langid-impl-0.9.4 \
+		unic-langid-0.9.5 \
+		unic-langid-impl-0.9.5 \
 		unic-segment-0.9.0 \
 		unic-ucd-segment-0.9.0 \
 		unic-ucd-version-0.9.0 \
-		unicase-2.7.0 \
-		unicode-bidi-0.3.14 \
-		unicode-ident-1.0.12 \
-		unicode-normalization-0.1.22 \
-		unicode-segmentation-1.10.1 \
-		unsafe-libyaml-0.2.10 \
+		unicase-2.8.1 \
+		unicode-ident-1.0.16 \
+		unicode-segmentation-1.12.0 \
+		unsafe-libyaml-0.2.11 \
 		untrusted-0.9.0 \
-		url-2.5.0 \
+		url-2.5.4 \
 		utf-8-0.7.6 \
-		utf8parse-0.2.1 \
+		utf16_iter-1.0.5 \
+		utf8_iter-1.0.4 \
+		utf8parse-0.2.2 \
+		uuid-1.13.1 \
+		v_frame-0.3.8 \
 		vcpkg-0.2.15 \
-		version_check-0.9.4 \
-		walkdir-2.4.0 \
+		version-compare-0.2.0 \
+		version_check-0.9.5 \
+		vlq-0.5.1 \
+		walkdir-2.5.0 \
 		want-0.3.1 \
 		wasi-0.9.0+wasi-snapshot-preview1 \
 		wasi-0.11.0+wasi-snapshot-preview1 \
-		wasm-bindgen-0.2.89 \
-		wasm-bindgen-backend-0.2.89 \
-		wasm-bindgen-futures-0.4.39 \
-		wasm-bindgen-macro-0.2.89 \
-		wasm-bindgen-macro-support-0.2.89 \
-		wasm-bindgen-shared-0.2.89 \
-		web-sys-0.3.66 \
-		webp-0.2.6 \
-		webpki-roots-0.25.3 \
-		weezl-0.1.7 \
+		wasi-0.13.3+wasi-0.2.2 \
+		wasm-bindgen-0.2.100 \
+		wasm-bindgen-backend-0.2.100 \
+		wasm-bindgen-futures-0.4.50 \
+		wasm-bindgen-macro-0.2.100 \
+		wasm-bindgen-macro-support-0.2.100 \
+		wasm-bindgen-shared-0.2.100 \
+		web-sys-0.3.77 \
+		web-time-1.1.0 \
+		webp-0.3.0 \
+		webpki-roots-0.26.8 \
+		weezl-0.1.8 \
 		winapi-0.2.8 \
 		winapi-0.3.9 \
 		winapi-build-0.1.1 \
 		winapi-i686-pc-windows-gnu-0.4.0 \
-		winapi-util-0.1.6 \
+		winapi-util-0.1.9 \
 		winapi-x86_64-pc-windows-gnu-0.4.0 \
-		windows-core-0.51.1 \
-		windows-sys-0.45.0 \
-		windows-sys-0.48.0 \
+		windows-core-0.52.0 \
+		windows-registry-0.2.0 \
+		windows-result-0.2.0 \
+		windows-strings-0.1.0 \
 		windows-sys-0.52.0 \
-		windows-targets-0.42.2 \
-		windows-targets-0.48.5 \
-		windows-targets-0.52.0 \
-		windows_aarch64_gnullvm-0.42.2 \
-		windows_aarch64_gnullvm-0.48.5 \
-		windows_aarch64_gnullvm-0.52.0 \
-		windows_aarch64_msvc-0.42.2 \
-		windows_aarch64_msvc-0.48.5 \
-		windows_aarch64_msvc-0.52.0 \
-		windows_i686_gnu-0.42.2 \
-		windows_i686_gnu-0.48.5 \
-		windows_i686_gnu-0.52.0 \
-		windows_i686_msvc-0.42.2 \
-		windows_i686_msvc-0.48.5 \
-		windows_i686_msvc-0.52.0 \
-		windows_x86_64_gnu-0.42.2 \
-		windows_x86_64_gnu-0.48.5 \
-		windows_x86_64_gnu-0.52.0 \
-		windows_x86_64_gnullvm-0.42.2 \
-		windows_x86_64_gnullvm-0.48.5 \
-		windows_x86_64_gnullvm-0.52.0 \
-		windows_x86_64_msvc-0.42.2 \
-		windows_x86_64_msvc-0.48.5 \
-		windows_x86_64_msvc-0.52.0 \
-		winnow-0.5.28 \
-		winreg-0.50.0 \
+		windows-sys-0.59.0 \
+		windows-targets-0.52.6 \
+		windows_aarch64_gnullvm-0.52.6 \
+		windows_aarch64_msvc-0.52.6 \
+		windows_i686_gnu-0.52.6 \
+		windows_i686_gnullvm-0.52.6 \
+		windows_i686_msvc-0.52.6 \
+		windows_x86_64_gnu-0.52.6 \
+		windows_x86_64_gnullvm-0.52.6 \
+		windows_x86_64_msvc-0.52.6 \
+		winnow-0.7.2 \
 		winres-0.1.12 \
+		wit-bindgen-rt-0.33.0 \
+		write16-1.0.0 \
+		writeable-0.5.5 \
 		ws-0.9.2 \
 		ws2_32-sys-0.2.1 \
-		xattr-1.1.3 \
-		xmlparser-0.13.6 \
-		yada-0.5.0 \
+		wyz-0.5.1 \
+		xattr-1.4.0 \
+		yada-0.5.1 \
 		yaml-rust-0.4.5 \
-		zerocopy-0.7.31 \
-		zerocopy-derive-0.7.31 \
-		zune-inflate-0.2.54
+		yoke-0.7.5 \
+		yoke-derive-0.7.5 \
+		zerocopy-0.7.35 \
+		zerocopy-derive-0.7.35 \
+		zerofrom-0.1.5 \
+		zerofrom-derive-0.1.5 \
+		zeroize-1.8.1 \
+		zerovec-0.10.4 \
+		zerovec-derive-0.10.3 \
+		zune-core-0.4.12 \
+		zune-inflate-0.2.54 \
+		zune-jpeg-0.4.14
