--- a/www/spawn-fcgi/Makefile
+++ b/www/spawn-fcgi/Makefile
@@ -6,7 +6,7 @@ MASTER_SITES=	http://download.lighttpd.net/spawn-fcgi/releases-1.6.x/
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Spawns fastcgi applications
-WWW=		http://redmine.lighttpd.net/projects/spawn-fcgi
+WWW=		https://redmine.lighttpd.net/projects/spawn-fcgi
 
 LICENSE=	bsd3
 
