--- a/dns/bindgraph/files/bindgraph.in
+++ b/dns/bindgraph/files/bindgraph.in
@@ -1,6 +1,5 @@
 #!/bin/sh
-#
-#
+
 # PROVIDE: bindgraph
 # REQUIRE: DAEMON
 #
@@ -9,13 +8,14 @@
 # bindgraph_enable="YES"
 #
 
-. %%RC_SUBR%%
+. /etc/rc.subr
 
 name="bindgraph"
-rcvar=`set_rcvar`
+rcvar=bindgraph_enable
 
-command=%%PREFIX%%/sbin/${name}.pl > /dev/null 2>&1
-command_interpreter=/usr/bin/perl
+command=%%PREFIX%%/sbin/${name}.pl
+command_args='> /dev/null 2>&1'
+command_interpreter="%%PREFIX%%/bin/perl"
 stop_postcmd=stop_postcmd
 
 stop_postcmd()
